--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+}
+
+.main-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+table,
+.console {
+	width: 100%;
+	max-width: 1200px;
+}
+
+.console {
+	min-height: 200px;
+	background-color: rgb(97, 97, 97);
+	color: white;
+	margin: 50px 0;
+	font-family: "Courier New", Courier, monospace;
+}
+
+table,
+th,
+td {
+	border-collapse: collapse;
+	/* border: 1px solid black; */
+	font-size: 15px;
+	text-align: left;
+}
+
+th {
+	height: 50px;
+	border-top: 1px solid #ddd;
+
+	background-color: #37103d;
+	color: white;
+}
+
+th,
+td {
+	padding: 10px;
+	border-bottom: 1px solid #ddd;
+}
+
+button {
+	width: 70px;
+	height: 70px;
+}
+
+button[disabled="disabled"],
+button:disabled {
+	background-color: #12544e;
+	color: white;
+}
+
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+.example,
+h3 {
+	font-family: "Courier New", Courier, monospace;
+}
+.albums-button,
+.album-button {
+	width: 295px;
+	height: 82px;
+}
+
+@media only screen and (max-width: 760px) {
+	/* Force table to not be like tables anymore */
+	table,
+	thead,
+	tbody,
+	th,
+	td,
+	tr {
+		display: block;
+		font-family: "Courier New", Courier, monospace;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	th {
+		display: none;
+	}
+
+	tr {
+		border: 1px solid #ccc;
+	}
+
+	td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+	}
+
+	td:nth-of-type(1):before {
+		content: "Filter";
+		font-weight: bold;
+	}
+	td:nth-of-type(2):before {
+		content: "Type";
+		font-weight: bold;
+	}
+	td:nth-of-type(3):before {
+		content: "Description";
+		font-weight: bold;
+	}
+	td:nth-of-type(4):before {
+		content: "Example";
+		font-weight: bold;
+	}
+	td:nth-of-type(5):before {
+		content: "Try";
+		font-weight: bold;
+	}
+
+	button {
+		width: 100%;
+	}
 }
