--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+code,
+pre {
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Roboto Mono",
 		monospace;
 }
 
@@ -26,10 +27,16 @@ table,
 
 .console {
 	min-height: 200px;
-	background-color: rgb(97, 97, 97);
+	max-height: 310px;
+	background-color: #323030;
 	color: white;
 	margin: 50px 0;
-	font-family: "Courier New", Courier, monospace;
+	font-family: "Roboto Mono", Courier, monospace;
+	overflow: auto;
+	font-size: 12px;
+	cursor: text;
+	color: #e54bff;
+	padding-left: 20px;
 }
 
 table,
@@ -37,15 +44,14 @@ th,
 td {
 	border-collapse: collapse;
 	/* border: 1px solid black; */
-	font-size: 15px;
+	font-size: 14px;
 	text-align: left;
 }
 
 th {
 	height: 50px;
 	border-top: 1px solid #ddd;
-
-	background-color: #37103d;
+	background-color: #323030;
 	color: white;
 }
 
@@ -55,9 +61,25 @@ td {
 	border-bottom: 1px solid #ddd;
 }
 
+th {
+	vertical-align: center;
+}
+
+td {
+	vertical-align: baseline;
+}
 button {
 	width: 70px;
-	height: 70px;
+	height: 30px;
+	cursor: pointer;
+	background: white;
+	font-weight: bold;
+	border: 1px solid darkgrey;
+	font-family: "Roboto", monospace;
+}
+
+button:hover {
+	background-color: #207d75;
 }
 
 button[disabled="disabled"],
@@ -72,7 +94,11 @@ tr:nth-child(even) {
 
 .example,
 h3 {
-	font-family: "Courier New", Courier, monospace;
+	font-family: "Roboto Mono", Courier, monospace;
+}
+
+.example {
+	font-size: 12px;
 }
 .albums-button,
 .album-button {
@@ -89,7 +115,7 @@ h3 {
 	td,
 	tr {
 		display: block;
-		font-family: "Courier New", Courier, monospace;
+		font-family: "Roboto Mono", Courier, monospace;
 	}
 
 	/* Hide table headers (but not display: none;, for accessibility) */
